--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<img src="images/sampson75.jpg" alt="Scott Sampson">
 	</aside>
 	<footer>
-		<p>&copy; 2012, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Muqtadira Alli, April 23 2024 </p>
 	</footer>
 </body>
 </html>
